--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								<li>The Write Place</li>
 								<li>ISBN-10	9383952229</li>
 								<li>302 pages</li>
-								<li><a href="http://amzn.to/19mUWxP" title="Buy">Buy<i class="icon-external-link"></i></a></li>
+								<li><a href="https://www.amazon.in/Business-As-Usual-Deepak-Chawla-ebook/dp/B00UZ8C244" title="Buy">Buy<i class="icon-external-link"></i></a></li>
 							</ul>
 						</div>
 					</figure>
